# maia

./: .env.example  .gitignore  README.md  kyutai_server.py  launch-kyutai.bat  launch-xtts.bat  pyproject.toml  requirements_voice_servers.txt  xtts_server.py
src/maia/: __init__.py  app.py  gateway.py  logging_config.py  routing.py  settings.py
src/maia/chat/: router.py
src/maia/config/: gateway.py  logging_config.py  settings.py
src/maia/history/: router.py
src/maia/routers/: _main_router.py  chat_router.py  session_router.py  settings_router.py  voice_router.py
src/maia/session/: router.py
src/maia/settings/: router.py
src/maia/voice/: detect_tts_noise.py  router.py  service.py  service_coqui_x_tts.py  service_cosyvoice_tts.py  service_kokoro_tts.py  service_pocket_tts.py  service_stt.py  service_tts.py
src/maia/voice/classes/: coqui_x_tts.local.py  coqui_x_tts.py  distant_tts.py  kokoro_tts.py  kyutai_tts.py  mock_stt.py  mock_tts.py  pocket_tts.py  tts_engine.py  whisper_stt.py
static/css/: _main.css  buttons.css  chat.css  history.css  layout.css  session.css  settings.css  style.css  vars.css  voice.css
static/js/: chat.js  history.js  main.js  menu.js  session.js  settings.js  stt.js  tts.js  utils.js  voice.js
templates/: base.html  index.html  voice.html
templates/chat/: chat_message.html  chat_messages.html  chat_sse.html  panel_chat.html
templates/chat/parts/: chat_audio.html  chat_reasoning.html  chat_tool_call.html  chat_tool_call_output.html
templates/layout/: footer.html  head.html  header.html  main.html  panel_left.html  panel_right.html  panel_voice.html
templates/parts/: chat_message.html  chat_messages.html  chat_reasoning.html  chat_sse.html  chat_tool_call.html  history.html  session_elem.html  sessions_list.html
templates/session/: filters.html  panel_sessions.html  session.html  sessions.html
templates/settings/: panel_settings.html  settings.html
tests/: test_chat.py
