[project]
name = "maia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "jinja2>=3.1.6",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.20",
    "uvicorn>=0.50.2",
    "httpx2",
    "python-multipart>=0.0.32",
    "faster-whisper>=1.2.1",
    "librosa>=0.11.0",
    "soundfile>=0.14.0",
    "torch>=2.13.0",
    "pocket-tts>=2.1.0",
    "emoji>=2.15.0",
    "kokoro>=0.9.4",
    "torchaudio>=2.11.0",
    "onnxruntime>=1.27.0",
    "hyperpyyaml>=1.2.3",
    "modelscope>=1.38.1",
    "openai-whisper>=20250625",
    "conformer>=0.3.2",
    "diffusers>=0.39.0",
    "gdown>=6.1.0",
    "inflect>=7.5.0",
    "omegaconf>=2.3.1",
    "hydra-core>=1.3.4",
    "lightning>=2.6.5",
    "matplotlib>=3.11.0",
    "wget>=3.2",
    "pyarrow>=25.0.0",
    "pyworld>=0.3.5",
    "torchcodec>=0.15.0",
    "x-transformers>=2.23.3",
    "coqui-tts>=0.27.5",
    "transformers<5",
    "pydub>=0.25.1",
    "pyloudnorm>=0.2.0",
]

[project.scripts]
maia = "maia.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
